[tool.poetry]
name = "final_project_ziqiliao"
version = "0.1.0"
description = "Python package for game recommendations and image of the game."
authors = ["Ziqi Liao <zl2988@columbia.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.semantic_release]
version_variable = "<final_project_ziqiliao>/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"
